--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
     "bootstrap": "^5.3.3",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2"
+  },
+  "scripts": {
+    "build": "webpack --config webpack.config.js"
   }
+  
 }
